# mp-quadrature

./: .depend  .gitignore  .mailmap  Make.common.in  Makefile  README  README.md  TODO  aclocal.m4  build_gmp_mpfr.sh  compute_residuals.py  configure  configure.ac  jacobian_10001.py  make_instance.sh  plot_00020.py  plot_11010.py  polynomial_division.py  run_tests.sh  test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  voronoi.py
Ro3_rules/: Ro3_Reynolds.py  Ro3_orbit.py  latin.py  plot_00020.py  test.py  test3.py  test5.py  test8.py
drivers/: .svnignore  Ro3.py  Ro3_deg6.C  compute_residuals_1D.C  conical_product_2D.C  conical_product_3D.C  dubiner_verify.C  dubiner_verify_double.C  dubiner_verify_jacobi.C  gatermann.C  gatermann_search.C  gm_rule.C  jacobi_rule.C  lu.C  nlopt_test.C  print_gauss.C  print_gauss_lobatto.C  pyramid_conical_product.C  test_read_rule.C  tri_rule.C
gmpfrxx/: Makefile  README  example.cpp  gmpfrxx.cpp  gmpfrxx.h
include/: common_definitions.h  compose_all.h  conical.h  do_mkdir.h  dubiner.h  exact.h  gauss.h  gauss_lobatto.h  generator.h  gradient_descent.h  grundmann_moller.h  integrand.h  jacobi.h  legendre.h  lhc.h  matrix.h  newton.h  nlcg.h  pyramid_rule.h  read_rule.h  ro3.h  rule.h  solver_data.h  test_ro3.h  vect.h
inputs/: closednc_01.out  closednc_03.out  closednc_04.out  closednc_05.out  closednc_06.out  closednc_07.out  closednc_08.out  closednc_09.out  closednc_10.out  closednc_11.out  opennc_01.out  opennc_02.out  opennc_03.out  opennc_04.out  opennc_05.out  opennc_06.out  opennc_07.out  opennc_08.out  opennc_09.out  opennc_10.out  opennc_11.out  quad_2d_p01.out  quad_2d_p02_bndry.out  quad_2d_p02_interior.out  quad_2d_p03_0-0-0-2-0_06QP.in  quad_2d_p03_0-0-0-2-0_06QP_third.in  quad_2d_p03_CP.out  quad_2d_p03_NI.out  quad_2d_p03_Ro3.in  quad_2d_p03_Ro3_00020_06QP_NI.in  quad_2d_p03_Ro3_00020_06QP_PI.in  quad_2d_p03_Ro3_00020_06QP_equal_weights.in  quad_2d_p03_Ro3_00020_06QP_fourth.in  quad_2d_p03_Ro3_00020_06QP_min_x1.in  quad_2d_p03_Ro3_00020_06QP_second.in  quad_2d_p03_Ro3_00110_06QP.in  quad_2d_p03_Ro3_00110_06QP_Case2a.in  quad_2d_p03_Ro3_00110_06QP_Case2b.in  quad_2d_p03_Ro3_11010_07QP.in  quad_2d_p03_Ro3_11010_07QP_CaseII_NB.in  (+101 more)
matlab/gauss/: gquad.m  leg.m
matlab/gm_rule/: gm_rule.m  permutations.txt
matlab/jacobi/: jacobi_newton.m  jacobi_points.m  jacobi_recur.m  jacobi_rule.m
src/: common_definitions.C  compose_all.C  conical.C  dubiner.C  dubiner_10th.C  dubiner_11th.C  dubiner_12th.C  dubiner_13th.C  dubiner_14th.C  dubiner_15th.C  dubiner_16th.C  dubiner_17th.C  dubiner_18th.C  dubiner_19th.C  dubiner_20th.C  dubiner_21st.C  dubiner_22nd.C  dubiner_23rd.C  dubiner_24th.C  dubiner_25th.C  dubiner_26th.C  dubiner_27th.C  dubiner_28th.C  dubiner_29th.C  dubiner_30th.C  dubiner_5th.C  dubiner_6th.C  dubiner_7th.C  dubiner_8th.C  dubiner_9th.C  dubiner_laplace_matrix.C  dubiner_orthogonality_coeffs.C  exact.C  gauss.C  gauss_lobatto.C  generator.C  gradient_descent.C  grundmann_moller.C  integrand.C  jacobi.C  (+9 more)
trunk/: .depend  .svnignore  Make.common.in  Makefile  README  TODO  config.status  configure  configure.in
trunk/drivers/: .svnignore  conical_product.C  conical_product.cc  conical_product_2D.C  conical_product_3D.C  jacobi_rule.cc  print_gauss.C
trunk/gmpfrxx/: Makefile  example.cpp  gmpfrxx.h
trunk/include/: common_definitions.h  gauss.h  jacobi.h
trunk/matlab/gauss/: gquad.m  leg.m
trunk/matlab/jacobi/: jacobi_constants.m  jacobi_newton.m  jacobi_points.m  jacobi_recur.m  jacobi_rule.m
trunk/src/: gauss.C  jacobi.C
voronoi/: quad_2d_p03_0-0-0-2-0_06QP_second_equilateral.csv  quad_2d_p03_CP_equilateral.csv  quad_2d_p03_NI_equilateral.csv  quad_2d_p03_Ro3_0-0-0-2-0_06QP_equilateral.csv  quad_2d_p03_Ro3_0-0-0-2-0_06QP_third_equilateral.csv  quad_2d_p03_Ro3_00020_06QP_PI_equilateral.csv  quad_2d_p03_Ro3_00020_06QP_equal_weights_equilateral.csv  quad_2d_p03_Ro3_00020_06QP_fourth_equilateral.csv  quad_2d_p03_Ro3_00020_06QP_min_x1_equilateral.csv  quad_2d_p03_Ro3_00110_06QP_Case2a_equilateral.csv  quad_2d_p03_Ro3_00110_06QP_Case2b_equilateral.csv  quad_2d_p03_Ro3_00110_06QP_equilateral.csv  quad_2d_p03_Ro3_11010_07QP_CaseII_NB_equilateral.csv  quad_2d_p03_Ro3_11010_07QP_CaseIV_NB_equilateral.csv  quad_2d_p03_Ro3_11010_07QP_CaseI_NB_equilateral.csv  quad_2d_p03_Ro3_11010_07QP_CaseV_PB_equilateral.csv  quad_2d_p03_Ro3_11010_07QP_equilateral.csv  quad_2d_p03_Ro3_11010_07QP_second_equilateral.csv  quad_2d_p03_Ro3_11010_07QP_third_equilateral.csv  quad_2d_p03_Ro3_11100_07QP_equilateral.csv  quad_2d_p04_06QP_equilateral.csv  quad_2d_p04_Ro3_0011_06QP_equilateral.csv  quad_2d_p05_07QP_equilateral.csv  quad_2d_p05_Ro3_1002_07QP_equilateral.csv  quad_2d_p06_Ro3_0022_12QP_equilateral.csv  quad_2d_p06_dunavant_12QP_equilateral.csv  quad_2d_p06_hompack1_12QP_equilateral.csv  quad_2d_p07_Ro3_0032_15QP_equilateral.csv  quad_2d_p07_Ro3_1013_13QP_equilateral.csv  quad_2d_p07_Ro3_1122_16QP_equilateral.csv  quad_2d_p07_dunavant_13QP_equilateral.csv  quad_2d_p07_gatermann_12QP_equilateral.csv  quad_2d_p07_hompack1_15QP_equilateral.csv  quad_2d_p07_mine15_equilateral.csv  quad_2d_p07_zhang_underdetermined_equilateral.csv  quad_2d_p08_16QP_equilateral.csv  quad_2d_p08_Ro3_0114_18QP_equilateral.csv  quad_2d_p08_Ro3_1014_16QP_equilateral.csv  quad_2d_p08_Ro3_1123_19QP_equilateral.csv  quad_2d_p09_19QP_equilateral.csv  (+47 more)
