dnl switch off caching, since that leads to insurmountable trouble if
dnl you call ./configure subsequently on different systems without
dnl clearing the cache
define([AC_CACHE_LOAD], )dnl
define([AC_CACHE_SAVE], )dnl
AC_REVISION($Revision: 1.1 $)


AC_INIT
AC_CONFIG_FILES(Make.common)

dnl Compute the canonical target system type variable "target", and its
dnl three individual parts: "target_cpu", "target_vendor", and "target_os"
AC_CANONICAL_TARGET

dnl The AC_SUBST(foo) command creates an output variable from a shell variable.
dnl This command also causes AC_OUTPUT to replace all instances of @VAR@ with
dnl the value of the shell variable VAR in the output files (e.g. one or more Makefiles).
AC_SUBST(host)

dnl Let the user specify the location of gmp header files with --with-gmp-include=/foo/bar
AC_ARG_WITH(gmp-include,
            AC_HELP_STRING([--with-gmp-include=PATH],[Specify the path for GMP header files]),
            withgmpinc=$withval,
            withgmpinc=/usr/include)
AC_SUBST(withgmpinc)

dnl Let the user specify the location of gmp libraries with --with-gmp-lib=/foo/bar
AC_ARG_WITH(gmp-lib,
            AC_HELP_STRING([--with-gmp-lib=PATH],[Specify the path for GMP libraries]),
            withgmplib=$withval,
            withgmplib=/usr/lib)
AC_SUBST(withgmplib)

dnl Let the user specify the location of mpfr header files with --with-mpfr-include=/foo/bar
AC_ARG_WITH(mpfr-include,
            AC_HELP_STRING([--with-mpfr-include=PATH],[Specify the path for MPFR header files]),
            withmpfrinc=$withval,
            withmpfrinc=/usr/include)
AC_SUBST(withmpfrinc)

dnl Let the user specify the location of mpfr libraries with --with-mpfr-lib=/foo/bar
AC_ARG_WITH(mpfr-lib,
            AC_HELP_STRING([--with-mpfr-lib=PATH],[Specify the path for MPFR libraries]),
            withmpfrlib=$withval,
            withmpfrlib=/usr/lib)
AC_SUBST(withmpfrlib)

AC_OUTPUT
rm -f conftest* config.cache

dnl Local Variables:
dnl mode: m4
dnl End:
